--- a/scss/dependencies/_specials.scss
+++ b/scss/dependencies/_specials.scss
@@ -13,12 +13,24 @@
     color: #FFFFFF;
     line-height: 40px;
     margin-bottom:10px;
+    @media (max-width:767px) {
+      font-size:38px;
+      margin-bottom:20px;
+    }
+    @media (max-width:480px) {
+      font-size:32px;
+    }
   }
   h3 {
     font-weight:600;
     font-size: 32px;
     color: #FFFFFF;
     margin-bottom:50px;
+    line-height:40px;
+    @media (max-width:480px) {
+      font-size:26px;
+      line-height:35px;
+    }
   }
 
   .three-blocks {
@@ -203,6 +215,7 @@
         width:100%;
         margin-left:0;
         margin-right:0;
+
       }
     }
   }
